Update LastSameInTree.java